syntax = "proto3";

package api;
option go_package = "./;api";

service Port {
  rpc GetPorts(GetPortsRequest) returns (GetPortsResponse);
  rpc UpsertPorts(UpsertPortsRequest) returns (UpsertPortsResponse);

}


message GetPortsRequest {
  string Name = 1;
}
message GetPortsResponse {
  string List = 1;
}
message UpsertPortsRequest {
  string Name = 1;
}
message UpsertPortsResponse {
  string List = 1;
}